Lab1/Code/syntax.output
Terminals unused in grammar

   UNDEF


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag error RC

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | Exp error SEMI

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | Specifier DecList error SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | Exp LB error RB

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 20 23 36 40 63
INT (258) 19 61
FLOAT (259) 62
ID (260) 15 17 18 21 22 23 56 57 59 60
SEMI (261) 4 5 7 30 32 36 39 40
COMMA (262) 9 24 42 64
ASSIGNOP (263) 44 45
RELOP (264) 48
PLUS (265) 49
MINUS (266) 50 54
STAR (267) 51
DIV (268) 52
AND (269) 46
OR (270) 47
DOT (271) 59
NOT (272) 55
LP (273) 21 22 33 34 35 53 56 57
RP (274) 21 22 23 33 34 35 53 56 57
LB (275) 19 20 58 63
RB (276) 19 58 63
LC (277) 12 27
RC (278) 12 14 27
STRUCT (279) 12 13 14
RETURN (280) 32
IF (281) 33 34
ELSE (282) 34
WHILE (283) 35
UNDEF (284)
TYPE (285) 10
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    左： 0
Program (33)
    左： 1, 右： 0
ExtDefList (34)
    左： 2 3, 右： 1 2
ExtDef (35)
    左： 4 5 6 7, 右： 2
ExtDecList (36)
    左： 8 9, 右： 4 9
Specifier (37)
    左： 10 11, 右： 4 5 6 26 39 40
StructSpecifier (38)
    左： 12 13 14, 右： 11
OptTag (39)
    左： 15 16, 右： 12 14
Tag (40)
    左： 17, 右： 13
VarDec (41)
    左： 18 19 20, 右： 8 9 19 20 26 43 44
FunDec (42)
    左： 21 22 23, 右： 6
VarList (43)
    左： 24 25, 右： 21 24
ParamDec (44)
    左： 26, 右： 24 25
CompSt (45)
    左： 27, 右： 6 31
StmtList (46)
    左： 28 29, 右： 27 28
Stmt (47)
    左： 30 31 32 33 34 35 36, 右： 28 33 34 35
DefList (48)
    左： 37 38, 右： 12 27 37
Def (49)
    左： 39 40, 右： 37
DecList (50)
    左： 41 42, 右： 39 40 42
Dec (51)
    左： 43 44, 右： 41 42
Exp (52)
    左： 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63,
    右： 30 32 33 34 35 36 44 45 46 47 48 49 50 51 52 53 54 55 58
    59 63 64 65
Args (53)
    左： 64 65, 右： 56 64


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag error RC

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  转到状态 11
    Tag     转到状态 12


State 3

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 14
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  转到状态 17
    VarDec      转到状态 18
    FunDec      转到状态 19


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    ID        reduce using rule 17 (Tag)
    SEMI      reduce using rule 17 (Tag)
    $default  reduce using rule 15 (OptTag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . error RC

    error  shift, and go to state 20
    LC     shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  接受


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . error RP

    error  shift, and go to state 22
    LP     shift, and go to state 23

    SEMI   reduce using rule 18 (VarDec)
    COMMA  reduce using rule 18 (VarDec)
    LB     reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  转到状态 28


State 20

   14 StructSpecifier: STRUCT OptTag error . RC

    RC  shift, and go to state 29


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 30
    StructSpecifier  转到状态 8
    DefList          转到状态 31
    Def              转到状态 32


State 22

   23 FunDec: ID error . RP

    RP  shift, and go to state 33


State 23

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    RP      shift, and go to state 34
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        转到状态 35
    StructSpecifier  转到状态 8
    VarList          转到状态 36
    ParamDec         转到状态 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  转到状态 39
    VarDec      转到状态 18


State 26

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 27

   27 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 30
    StructSpecifier  转到状态 8
    DefList          转到状态 42
    Def              转到状态 32


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   14 StructSpecifier: STRUCT OptTag error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 30

   39 Def: Specifier . DecList SEMI
   40    | Specifier . DecList error SEMI

    ID  shift, and go to state 38

    VarDec   转到状态 43
    DecList  转到状态 44
    Dec      转到状态 45


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 32

   37 DefList: Def . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 30
    StructSpecifier  转到状态 8
    DefList          转到状态 47
    Def              转到状态 32


State 33

   23 FunDec: ID error RP .

    $default  reduce using rule 23 (FunDec)


State 34

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 35

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  转到状态 48


State 36

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 37

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 25 (VarList)


State 38

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 40

   20 VarDec: VarDec LB error .

    $default  reduce using rule 20 (VarDec)


State 41

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


State 42

   27 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 27
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    $default  reduce using rule 29 (StmtList)

    CompSt    转到状态 61
    StmtList  转到状态 62
    Stmt      转到状态 63
    Exp       转到状态 64


State 43

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 26

    $default  reduce using rule 43 (Dec)


State 44

   39 Def: Specifier DecList . SEMI
   40    | Specifier DecList . error SEMI

    error  shift, and go to state 66
    SEMI   shift, and go to state 67


State 45

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 41 (DecList)


State 46

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 47

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 48

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 26 (ParamDec)


State 49

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 50

   24 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        转到状态 35
    StructSpecifier  转到状态 8
    VarList          转到状态 69
    ParamDec         转到状态 37


State 51

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 52

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 53

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 54

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .

    LP  shift, and go to state 70

    $default  reduce using rule 60 (Exp)


State 55

   54 Exp: MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 71


State 56

   55 Exp: NOT . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 72


State 57

   53 Exp: LP . Exp RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 73


State 58

   32 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 74


State 59

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 75


State 60

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 61

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 62

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 77


State 63

   28 StmtList: Stmt . StmtList

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 27
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    $default  reduce using rule 29 (StmtList)

    CompSt    转到状态 61
    StmtList  转到状态 78
    Stmt      转到状态 63
    Exp       转到状态 64


State 64

   30 Stmt: Exp . SEMI
   36     | Exp . error SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    error     shift, and go to state 79
    SEMI      shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90


State 65

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 91


State 66

   40 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 92


State 67

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 68

   42 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   转到状态 43
    DecList  转到状态 93
    Dec      转到状态 45


State 69

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 70

   56 Exp: ID LP . Args RP
   57    | ID LP . RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57
    RP     shift, and go to state 94

    Exp   转到状态 95
    Args  转到状态 96


State 71

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    DOT   shift, and go to state 89
    LB    shift, and go to state 90

    $default  reduce using rule 54 (Exp)


State 72

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 55 (Exp)


State 73

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 97
    LB        shift, and go to state 90


State 74

   32 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    SEMI      shift, and go to state 98
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90


State 75

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt
